[package]
name = "bevy_incandescent"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/443eb9/bevy_incandescent"
description = "A 2d lighting crate for bevy."
include = ["src/*"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "png",
    "bevy_sprite",
    "multi-threaded",
    "x11",
    "wayland",
] }
thread_local = "1.1"

[dev-dependencies]
bevy = { version = "0.13", features = [
    "bevy_ui",
    "default_font",
    "trace_tracy",
    "bevy_winit",
    "bevy_asset",
    "bevy_gizmos",
] }
bevy_mod_debugdump = "0.10.0"
bevy-inspector-egui = "0.23.2"
rand = "0.8"

[features]
default = []
debug = []

# [patch.crates-io]
# bevy = { path = "../bevy" }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "print_graph"
path = "examples/print_graph.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
